[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default =["left"]
left = []
right = []

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"
        
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }


rp2040-hal = { version = "0.5.0", features = ["rt"]}
usb-device = "0.2.9"
keyberon = { git = "https://github.com/TeXitoi/keyberon" }

mutex-trait = "0.2.0"
heapless = "0.7.13"
rp2040-boot2 = "0.2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-pro = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
